--- a/index.html
+++ b/index.html
@@ -10,6 +10,57 @@
 
 </head>
 <body>
-<h1>Iphone 13 Pro</h1>
+    <header>
+        <nav>
+            <ul id="navbar">
+                <li id="logo">
+                    <a href="#">
+                        <img src="img/logo_apple.svg" alt="Logo da apple Store">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Loja</a>
+                </li>
+                <li>
+                    <a href="#">Mac</a>
+                </li>
+                <li>
+                    <a href="#">Produtos</a>
+                </li>
+                <li>
+                    <a href="#">Ipad</a>
+                </li>
+                <li>
+                    <a href="#">Iphone</a>
+                </li>
+                <li>
+                    <a href="#">Watch</a>
+                </li>
+                <li>
+                    <a href="#">AirPods</a>
+                </li>
+                <li>
+                    <a href="#">Só na Apple</a>
+                </li>
+                <li>
+                    <a href="#">Acessórios</a>
+                </li>
+                <li>
+                    <a href="#">Suporte</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="bottom-header">
+            <div id="bottom-header-inner">
+                <h3>Iphone 13 Pro</h3>
+                <div id="bottom-header-links">
+                    <a href="#">Visão geral</a>
+                    <a href="#">Mudar para o Iphone</a>
+                    <a href="#">Especificações</a>
+                    <a href="#" id="btn">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
