--- a/index.html
+++ b/index.html
@@ -57,10 +57,47 @@
                     <a href="#">Visão geral</a>
                     <a href="#">Mudar para o Iphone</a>
                     <a href="#">Especificações</a>
-                    <a href="#" id="btn">Comprar</a>
+                    <a href="#" class="btn">Comprar</a>
                 </div>
             </div>
         </div>
     </header>
+    <div id="ribbon">
+        <p>Pague seu novo Iphone em até 12 parcelas ou econimze 10% nos pagamentos à vista. <a href="#">Saiba mais</a></p>
+    </div>
+    <h1 id="title">Iphone 13 Pro</h1>
+    <p id="subtitle">É todo Pro</p>
+    <p id="description">
+        o Iphone 13 Pro é uma enorme evolução. Ele traz uma rapidez absurda a tudo o que você faz e vem com novos recursos espetaculares para fotos e vídeos. Tudo em dois tamanhos.
+    </p>
+    <p id="price">A partir de R$ 9.499</p>
+    <a href="#" class="btn">Comprar</a>
+    <img id="product-image" src="img/iphone_green.jpg" alt="Iphone 13 Pro"/>
+
+    <div id="image-picker">
+        <ul>
+            <li id="green">
+                <span class="color selected"></span>
+                <span class="description">Verde-Alpino</span>
+            </li>
+            <id id="silver">
+                <span class="color"></span>
+                <span class="description">Prateado</span>
+            </li>
+            <li class="golden">
+                <span class="color"></span>
+                <span class="description">Dourado</span>
+            </li>
+            <li id="grafite">
+                <span class="color"></span>
+                <span class="description">Grafite</span>
+            </li>
+            <li id="blue">
+                <span class="color"></span>
+                <span class="description">Azul-Sierra</span>
+            </li>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
