--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <div id="ribbon">
         <p>Pague seu novo Iphone em até 12 parcelas ou econimze 10% nos pagamentos à vista. <a href="#">Saiba mais</a></p>
     </div>
-    <h1 id="title">Iphone 13 Pro</h1>
+    <main id="main-content">
+        <h1 id="title">Iphone 13 Pro</h1>
     <p id="subtitle">É todo Pro</p>
     <p id="description">
         o Iphone 13 Pro é uma enorme evolução. Ele traz uma rapidez absurda a tudo o que você faz e vem com novos recursos espetaculares para fotos e vídeos. Tudo em dois tamanhos.
@@ -80,11 +81,11 @@
                 <span class="color selected"></span>
                 <span class="description">Verde-Alpino</span>
             </li>
-            <id id="silver">
+            <li id="silver">
                 <span class="color"></span>
                 <span class="description">Prateado</span>
             </li>
-            <li class="golden">
+            <li id="golden">
                 <span class="color"></span>
                 <span class="description">Dourado</span>
             </li>
@@ -99,5 +100,6 @@
             </li>
         </ul>
     </div>
+    </main>
 </body>
 </html>
