--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </li>
             </ul>
         </nav>
-        <div id="buttom-header">
-            <div id="buttom-header-inner">
+        <div id="bottom-header">
+            <div id="bottom-header-inner">
                 <h3>Iphone 13 Pro</h3>
-                <div id="buttom-header-links">
+                <div id="bottom-header-links">
                     <a href="#">Visão geral</a>
                     <a href="#">Mudar para o Iphone</a>
                     <a href="#">Especificações</a>
